# customer-support-env

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_api.py  test_environment.py  test_grader.py  test_mock_run.py  validate_output.txt  validate_utf8.txt
scripts/: baseline_agent.py
server/: app.py  environment.py  requirements.txt  tasks.py
